# lcopy

./: .gitignore  ChangeLog  Makefile.am  TODO  autogen.sh  configure.ac
misc/: Makefile.am
misc/m4/: Makefile.am  rpm.m4
misc/makefiles/: Makefile.am  rpm.mk
misc/specs/: Makefile.am  lcopy.spec.in  make-sub-spec
src/: Makefile.am  README  lcopy-checkout  lcopy-genconf  lcopy-rebirth  lcopy-update  liblcopy.sh.in  liblcopy_backends.sh.in
src/backends/: Makefile.am  bzr  cvs  darcs  debwatch  git  hg  mtn  rsync  svn  uupdate  wgetx
src/conf.d/: DONE  Makefile.am  update.sh
src/conf.d/android/: Makefile.am  apv,trunk.lcopy  confs.mk  connectbot,trunk.lcopy  spice-client-android,trunk.lcopy  vimtouch,trunk.lcopy
src/conf.d/sys/: ConsoleKit,trunk.lcopy  Kahua,trunk.lcopy  Makefile.am  NetworkManager,trunk.lcopy  anaconda,trunk.lcopy  asakusafw,trunk.lcopy  attr,trunk.lcopy  audit,trunk.lcopy  autoconf,trunk.lcopy  autofs,trunk.lcopy  automake,trunk.lcopy  bind,released.lcopy  binutils,trunk.lcopy  biwascheme,trunk.lcopy  busybox,trunk.lcopy  cairo,trunk.lcopy  cc-mode,trunk.lcopy  cloud-init,trunk.lcopy  cloudstack,trunk.lcopy  cluster,stable31.lcopy  cluster,trunk.lcopy  confs.mk  coreipm,trunk.lcopy  coreutils,trunk.lcopy  corosync,trunk.lcopy  createrepo,trunk.lcopy  ctags,trunk.lcopy  cups,trunk.lcopy  cygwin,trunk.lcopy  dbus,trunk.lcopy  ddskk,trunk.lcopy  device-mapper-multipath,trunk.lcopy  dhcp,trunk.lcopy  dlm,trunk.lcopy  dovecot,2_1.lcopy  dstat,trunk.lcopy  e2fsprogs,trunk.lcopy  eclipse-sequoyah,trunk.lcopy  elfutils,trunk.lcopy  emacs,trunk.lcopy  (+164 more)
src/hook.d/: Makefile.am
tests/: MEMO
