SUBDIRS  = .
SUBDIRS += backends
SUBDIRS += conf.d
SUBDIRS += hook.d

bin_SCRIPTS=					\
	liblcopy.sh				\
	liblcopy_backends.sh			\
						\
	$(NULL)
CLEANFILES = $(bin_SCRIPTS)

dist_bin_SCRIPTS =     \
	\
        lcopy-genconf  \
        lcopy-checkout \
        lcopy-update   \
        lcopy-rebirth  \
	lcopy-ping     \
	\
        $(NULL)

